# challenge2023_client

./: README.md
.catkin_tools/profiles/default/: devel_collisions.txt
src/task_client/: .clang-format  CMakeLists.txt  client_run.sh  package.xml
src/task_client/action/: AskForSearchObj.action  LookAt.action
src/task_client/checkpoints/scene_test_2048_bs3_hor_sigma_001/: checkpoint  config.yaml  log_train.txt  model.ckpt-144144.index  model.ckpt-45045.index  model.ckpt-54054.index  model.ckpt-72072.index  pointnet2_grasp_direct.py  train_grasp_direct.py
src/task_client/demo/include/: util.h
src/task_client/demo/include/semmap_byted/: map.h  object.h  prior_knowledge.h  voxel.h
src/task_client/demo/include/util/: cell_range_2d.h  feature.h  object_type.h  point_type.h  time_profiler.h  voxel_idx.h
src/task_client/demo/launch/: demo_socket.launch  webots_nav_with_mpc.launch
src/task_client/demo/src/: arguments.py  constant.py  construct_semmap_with_socket.cpp  data_visualizer.py  object_search_planner_socket.py  task_client_demo.py  task_client_example.py  task_client_socket.py
src/task_client/scripts/contact_graspnet/: config_utils.py  data.py  inference.py  seg.txt  visualization_utils.py
src/task_client/scripts/contact_graspnet/results/: predictions_pc.npz
src/task_client/scripts/graspnetAPI/examples/: exam_eval.py
src/task_client/scripts/graspnetAPI/graspnetAPI.egg-info/: PKG-INFO
src/task_client/scripts/graspnetAPI/graspnetAPI/utils/: eval_utils.py
